--- a/logix.cabal
+++ b/logix.cabal
@@ -16,7 +16,7 @@ extra-source-files:  README.md
 executable logix
   hs-source-dirs:      src
   main-is:             Main.hs
-  other-modules:       Calculus, Parse
+  other-modules:       Calculus, Calculi, Parse
   default-language:    Haskell2010
   build-depends:       base >= 4.7,
                        lens,
@@ -24,7 +24,7 @@ executable logix
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Calculus, Parse
+  exposed-modules:     Calculus, Calculi, Parse
   other-modules:
   default-language:    Haskell2010
   build-depends:       base >= 4.7,
