--- a/logix.cabal
+++ b/logix.cabal
@@ -1,14 +1,14 @@
 name:                logix
-version:             0.1.0
+version:             0.2.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/githubuser/logix#readme
+homepage:            https://github.com/benjaminselfridge/logix
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2017 Author name here
-category:            Web
+author:              Ben Selfridge
+maintainer:          benselfridge@gmail.com
+copyright:           2017 Ben Selfridge
+category:            Math
 build-type:          Simple
 cabal-version:       >=1.10
 extra-source-files:  README.md
@@ -19,7 +19,6 @@ executable logix
   other-modules:       Calculus, Calculi, Parse
   default-language:    Haskell2010
   build-depends:       base >= 4.7,
-                       lens,
                        split
 
 library
@@ -28,5 +27,4 @@ library
   other-modules:
   default-language:    Haskell2010
   build-depends:       base >= 4.7,
-                       lens,
                        split
