--- a/logix.cabal
+++ b/logix.cabal
@@ -19,6 +19,7 @@ executable logix
   other-modules:       Calculus, Calculi, Parse, Utils, PPCalculus
   default-language:    Haskell2010
   build-depends:       base >= 4.7,
+                       monadplus >= 1.4,
                        split
 
 library
@@ -27,4 +28,5 @@ library
   other-modules:
   default-language:    Haskell2010
   build-depends:       base >= 4.7,
+                       monadplus >= 1.4,
                        split
